# gooroom-showdesktop-plugin

./: Makefile.am  README  configure.ac.in
debian/: changelog  control  copyright  rules
icons/: Makefile.am
icons/24x24/status/: Makefile.am
icons/scalable/apps/: Makefile.am
icons/scalable/status/: Makefile.am
panel-plugin/: Makefile.am  showdesktop-plugin.c  showdesktop-plugin.desktop.in.in  showdesktop-plugin.h
po/: POTFILES.in  POTFILES.skip  en_GB.po  en_US.po  ko.po
